# henri

./: .gitignore  COMPLICATIONS.md  README.md  TUTORIAL.md  lines.sh  pyproject.toml
.github/workflows/: ci.yml
henri/: __init__.py  agent.py  cli.py  config.py  messages.py  permissions.py
henri/providers/: __init__.py  base.py  bedrock.py  google.py  ollama.py  openai_compatible.py  vertex.py
henri/tools/: __init__.py  base.py
hooks/: bench.py  dafny.py
