[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "henri"
version = "0.1.0"
description = "A pedagogical Claude Code clone"
requires-python = ">=3.11"
dependencies = [
    "anthropic[vertex]>=0.40.0",  # Anthropic SDK for Vertex AI
    "boto3>=1.34.0",              # AWS SDK for Bedrock
    "google-genai>=1.0.0",        # Google Gemini API
    "ollama>=0.4.0",              # Ollama local models
    "prompt-toolkit>=3.0.0",      # Readline-style input
    "rich>=13.0.0",               # Terminal formatting
    "beautifulsoup4>=4.12.0",     # HTML parsing
]

[project.scripts]
henri = "henri.cli:main"

[tool.setuptools.packages.find]
where = ["."]
